https://github.com/hasii2011/PyUt/issues/106

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -80,7 +80,7 @@
             "propagate": "False"
         },
         "org.pyut.MiniOgl.DiagramFrame": {
-            "level":     "DEBUG",
+            "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
