--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ python:
 install:
   # pip install -r requirements.txt
   # - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
-  - pip install wxPython
+  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython-4.0.7.post2-cp36-cp36m-linux_x86_64.whl
   - pip install xmlschema
   - pip install html-testRunner
   - pip install pygmlparser
