--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,7 @@ Pyut.dist/
 /pyoxidizer-pyut/
 /.eggs/
 UNKNOWN.egg-info
-/Python-3.7.3/
-/venv-pyenv-3.7.3/
-/venv-pyenv-3.8.2/
-/venv-Python-3.7.3
-/venv-nuitka/
+/venv-3.7.7/
 /site/
 /docs/
 /pyut.log
