https://github.com/hasii2011/PyUt/issues/126

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -34,15 +34,15 @@
             "propagate": "False"
         },
         "org": {
-            "level":     "INFO",
+            "level":     "WARNING",
             "propagate": "False",
             "handlers":  ["consoleHandler"]
         },
         "org.pyut": {
-            "level":     "INFO",
+            "level":     "WARNING",
             "propagate": "False"
         },
-        "org.pyut.ui.MainUI": {
+        "org.pyut.general.Mediator": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
