https://github.com/hasii2011/PyUt/issues/140
Some of the class variable names were incorrect.  Some PEP-8 updates

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -42,6 +42,10 @@
             "level":     "WARNING",
             "propagate": "False"
         },
+        "org.pyut.ui": {
+            "level":     "WARNING",
+            "propagate": "False"
+        },
         "org.pyut.general.Mediator": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
