https://github.com/hasii2011/PyUt/issues/142
Using new code

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -46,6 +46,14 @@
             "level":     "WARNING",
             "propagate": "False"
         },
+        "org.pyut.plugins.gml": {
+            "level":     "WARNING",
+            "propagate": "False"
+        },
+        "org.pyut.plugins": {
+            "level":     "INFO",
+            "propagate": "False"
+        },
         "org.pyut.general.Mediator": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
