--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ install:
   - pip install pygmlparser
 
 # command to run tests
-script: ${TRAVIS_BUILD_DIR}/runtests.sh
+script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
