https://github.com/hasii2011/PyUt/issues/168
First version of this with no methods displayed

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -53,6 +53,10 @@
         "org.pyut.plugins": {
             "level":     "INFO",
             "propagate": "False"
+        },
+        "org.pyut.plugins.io.pdfsupport.OglToPdfDefinition": {
+            "level":     "INFO",
+            "propagate": "False"
         }
     }
 }
