--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 html-testRunner==1.2.1
-xmlschema==1.1.3
+xmlschema==1.2.2
 pygmlparser==1.0.0
 wxPython==4.1.0
-pyumldiagrams==1.0.8
+pyumldiagrams==1.0.10
 fpdf2==2.0.5
+orthogonal==1.1.5
+py2app==0.21
+setuptools==49.2.1
+epr==0.25
+antlr4-python3-runtime==4.8
+networkx==2.4
+
+
