--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
   - pip install html-testRunner
   - pip install pygmlparser
   - pip install orthogonal
+  - pip install antlr4-python3-runtime
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
