<Enhancement>[Diagrams]: Optional Display of diagram Grid
Need a test diagram

https://github.com/hasii2011/PyUt/issues/192

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -46,6 +46,10 @@
             "level":     "WARNING",
             "propagate": "False"
         },
+        "org.pyut.MiniOgl": {
+            "level":     "INFO",
+            "propagate": "False"
+        },
         "org.pyut.plugins.gml": {
             "level":     "WARNING",
             "propagate": "False"
