--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,15 @@ python:
 # command to install dependencies
 install:
   # pip install -r requirements.txt
-  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
-  - pip install xmlschema
-  - pip install html-testRunner
-  - pip install pygmlparser
-  - pip install orthogonal
   - pip install antlr4-python3-runtime
   - pip install fpdf2
+  - pip install html-testRunner
+  - pip install networkx
+  - pip install orthogonal
+  - pip install pygmlparser
   - pip install pyumldiagrams
   - pip install wxPython
+  - pip install xmlschema
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
