--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # os: osx
 
 # osx_image: xcode11.2
-# dist: Bionic
+dist: bionic
 
 notifications:
   email:
@@ -32,6 +32,7 @@ install:
   - pip install pygmlparser
   - pip install pyumldiagrams
   - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
+  - pip install wxPython
   - pip install xmlschema
 
 # command to run tests
