--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - pip install orthogonal
   - pip install pygmlparser
   - pip install pyumldiagrams
-  - pip install --verbose -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
+  - pip --verbose install wxPython
   - pip install xmlschema
 
 # command to run tests
