<Enhancement>[Preferences]: Travis Fix
Use Mac OS X that I build on at home; get a valid python

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ services:
 # command to install dependencies
 install:
   # pip install -r requirements.txt
-  - brew install python
+  - brew install python3
   - pip install antlr4-python3-runtime
   - pip install fpdf2
   - pip install html-testRunner
