--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,17 @@ python:
 # command to install dependencies
 install:
   # pip install -r requirements.txt
-  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
-  - pip install wxPython
-  - pip install antlr4-python3-runtime
-  - pip install fpdf2
-  - pip install html-testRunner
-  - pip install networkx
-  - pip install orthogonal
-  - pip install pygmlparser
-  - pip install pyumldiagrams
-  - pip install xmlschema
+  - python3 --version
+  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
+  - pip3 install wxPython
+  - pip3 install antlr4-python3-runtime
+  - pip3 install fpdf2
+  - pip3 install html-testRunner
+  - pip3 install networkx
+  - pip3 install orthogonal
+  - pip3 install pygmlparser
+  - pip3 install pyumldiagrams
+  - pip3 install xmlschema
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
