<Enhancement>[Preferences]: Travis Fix
See if we fix the import what happens

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
+dist: focal
+
 language: python
 
 cache: pip
@@ -24,7 +26,7 @@ python:
 install:
   # pip install -r requirements.txt
   - python3 --version
-  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
+  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
   - pip3 install wxPython
   - pip3 install antlr4-python3-runtime
   - pip3 install fpdf2
