<Enhancement>[CreateClass]: Align create class
Align to grid on class creation; Static method may be moved

[https://github.com/hasii2011/PyUt/issues/188]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -46,6 +46,10 @@
             "level":     "WARNING",
             "propagate": "False"
         },
+        "org.pyut.commands": {
+            "level":     "INFO",
+            "propagate": "False"
+        },
         "org.pyut.MiniOgl": {
             "level":     "INFO",
             "propagate": "False"
