<Enhancement>[Dialog Preferences]: Fix debug
Use class debuggers

[https://github.com/hasii2011/PyUt/issues/6]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -57,6 +57,15 @@
             "level":     "DEBUG",
             "propagate": "False"
         },
+        "org.pyut.miniogl.LineShape": {
+            "level":     "DEBUG",
+            "propagate": "False"
+        },
+                "org.pyut.miniogl.Shape": {
+            "level":     "DEBUG",
+            "propagate": "False"
+        },
+
         "org.pyut.ogl.OglAssociation": {
             "level":     "DEBUG",
             "propagate": "False"
