<Bug>[OglLink]: First Part
First part of check in not using child text labels;  However, changed API so legacy format readers also had to be modified;  Not sure how important this was

[https://github.com/hasii2011/PyUt/issues/66]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -58,16 +58,16 @@
             "propagate": "False"
         },
         "org.pyut.miniogl.LineShape": {
-            "level":     "DEBUG",
+            "level":     "INFO",
             "propagate": "False"
         },
-                "org.pyut.miniogl.Shape": {
-            "level":     "DEBUG",
+        "org.pyut.miniogl.Shape": {
+            "level":     "INFO",
             "propagate": "False"
         },
 
         "org.pyut.ogl.OglAssociation": {
-            "level":     "DEBUG",
+            "level":     "INFO",
             "propagate": "False"
         },
         "org.pyut.plugins.gml": {
