<Bug>[OglLink]: Second Part
I hate Tuples;   So using real objects, aka data classes

[https://github.com/hasii2011/PyUt/issues/66]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -67,7 +67,7 @@
         },
 
         "org.pyut.ogl.OglAssociation": {
-            "level":     "INFO",
+            "level":     "WARNING",
             "propagate": "False"
         },
         "org.pyut.plugins.gml": {
