--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
+wheel==0.36.1
+setuptools==50.3.2
+py2app==0.22
 antlr4-python3-runtime==4.9
 epr==0.25
 fpdf2==2.0.6
 html-testRunner==1.2.1
 networkx==2.5
 orthogonal==1.1.5
-py2app==0.22
 pygmlparser==1.0.0
-pyumldiagrams==2.21
-setuptools==50.3.2
+pyumldiagrams==2.22
 wxPython==4.1.1
 xmlschema==1.3.1
