<Enhancement>[Native Image Generation]: All functionality in
Does not support .gif, so we substituted .tiff

[https://github.com/hasii2011/PyUt/issues/230]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -70,7 +70,7 @@
             "propagate": "False"
         },
         "org.pyut.plugins": {
-            "level":     "ERROR",
+            "level":     "WARNING",
             "propagate": "False"
         },
         "org.pyut.plugins.io.pdfsupport.OglToPdfDefinition": {
