<Enhancement>[Default Project]: fix to close default project on load
Big fix

[https://github.com/hasii2011/PyUt/issues/233]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -30,7 +30,8 @@
         },
         "org": {
             "level":     "WARNING",
-            "propagate": "False"
+            "propagate": "False",
+            "handlers":  ["consoleHandler"]
         },
         "org.pyut": {
             "level":     "WARNING",
