--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-wheel==0.36.1
-setuptools==50.3.2
+wheel==0.36.2
+setuptools~=51.1.0
 py2app==0.22
 antlr4-python3-runtime==4.9
 epr==0.25
-fpdf2==2.0.6
+fpdf2~=2.0.6
 html-testRunner==1.2.1
 networkx==2.5
 orthogonal==1.1.5
