<Refactor>[User Interface]: Not really part of this issue
Time to get back on Trunk

[https://github.com/hasii2011/PyUt/issues/237]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -41,7 +41,7 @@
             "level":     "WARNING",
             "propagate": "False"
         },
-        "org.pyut.ui.frame.EditMenuHandler": {
+        "org.pyut.ui.TreeNotebookHandler": {
             "level":     "INFO",
             "propagate": "False"
         }
