<New Feature>[Check New Version]: Python 3.9.0 and Pyut 6.3.0
Update requirements.tx
Update PyutVersion.py
Cleanup logging configuration
Fix typo in property name when changing Pyut positioning
Create Release notes

[https://github.com/hasii2011/PyUt/issues/197]
[https://github.com/hasii2011/PyUt/issues/243]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -42,7 +42,7 @@
             "propagate": "False"
         },
         "org.pyut.ui.TreeNotebookHandler": {
-            "level":     "INFO",
+            "level":     "WARNING",
             "propagate": "False"
         }
     }
