<New Feature>[Check New Version]: Fix Travis CI
[https://github.com/hasii2011/PyUt/issues/197]
[https://github.com/hasii2011/PyUt/issues/243]

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
-dist: focal
+dist: xenial
 
 language: python
 
