--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ services:
 python:
   - "3.9.0"
 
+before_install:
+  - sudo apt install libgtk-3-dev
+  - sudo apt-get install python-wxgtk3.0
+
 # command to install dependencies
 install:
   # pip install -r requirements.txt
