--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
-dist: xenial
+dist: focal
 
 language: python
 
