--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ python:
   - "3.9.0"
 
 before_install:
-  - sudo apt install libgtk-3-dev
-  # - sudo apt-get install python-wxgtk3.0
+  # - sudo apt install libgtk-3-dev
+  sudo apt-get install python-wxgtk3.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
