--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ services:
   - xvfb
 
 python:
-  - "3.9.0"
+  - "3.8.5"
 
 before_install:
   # - sudo apt install libgtk-3-dev
-  - sudo apt-get install python-wxgtk3.0
+  # - sudo apt-get install python-wxgtk3.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
@@ -32,7 +32,7 @@ install:
   # pip install -r requirements.txt
   - python3 --version
   - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
-  # - pip3 install wxPython
+  - pip3 install wxPython
   - pip3 install antlr4-python3-runtime
   - pip3 install fpdf2
   - pip3 install html-testRunner
