--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   # pip install -r requirements.txt
   - python3 --version
   - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
-  - pip3 install wxPython
+  # - pip3 install wxPython
   - pip3 install antlr4-python3-runtime
   - pip3 install fpdf2
   - pip3 install html-testRunner
