--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ python:
   - "3.9.1"
 
 before_install:
-  - sudo apt install libgtk-3-dev
-  - sudo apt-get install python-wxgtk3.0
-  - sudo apt-get install python3-wxgtk4.0 python3-wxgtk-webview4.0 python3-wxgtk-media4.0​
+  # - sudo apt install libgtk-3-dev
+  # - sudo apt-get install python-wxgtk3.0
+  # - sudo apt-get install python3-wxgtk4.0 python3-wxgtk-webview4.0 python3-wxgtk-media4.0
   - sudo apt-get install -y  libsdl2-dev
 
 # command to install dependencies
