--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ python:
   - "3.9.1"
 
 before_install:
-  # - sudo apt install libgtk-3-dev
-  # - sudo apt-get install python-wxgtk3.0
+  - sudo apt install libgtk-3-dev
+  - sudo apt-get install python-wxgtk3.0
   # - sudo apt-get install python3-wxgtk4.0 python3-wxgtk-webview4.0 python3-wxgtk-media4.0
   - sudo apt-get install -y  libsdl2-dev
 
@@ -40,8 +40,8 @@ install:
   - pip3 install pygmlparser
   - pip3 install pyumldiagrams
   - pip3 install xmlschema
-  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
-  # - pip3 install wxPython
+  - pip3 install wxPython
+  # - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
