Try bionic generic wxpython from pypi

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
-dist: focal
+dist: bionic
 
 language: python
 
@@ -41,7 +41,7 @@ install:
   - pip3 install pyumldiagrams
   - pip3 install xmlschema
   - pip3 install wxPython
-  # - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-20.04 wxPython
+  # - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
