--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ UNKNOWN.egg-info
 /venv-pyenv-3.9.0/
 /venv-pyenv-3.8.5-alternate/
 /venv-pyenv-3.9.1rc1+/
+/venv-pyenv-3.9.1/
 /site/
 /docs/
 /pyut.log
