<Enhancement>[Preferences]: Start of new preference panel
Fix visibility of abstract methods in base panel __ should be _

[https://github.com/hasii2011/PyUt/issues/251]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-wheel==0.36.2
-setuptools~=51.1.1
-py2app==0.23
-antlr4-python3-runtime==4.9
-epr==0.25
-fpdf2~=2.0.6
-html-testRunner==1.2.1
-networkx==2.5
-orthogonal==1.1.5
-pygmlparser==1.0.0
-pyumldiagrams==2.22
+wheel~=0.36.2
+setuptools~=52.0.0
+py2app~=0.23
+antlr4-python3-runtime~=4.8
+epr~=0.25
+html-testRunner~=1.2.1
+orthogonal~=1.1.6
+pygmlparser~=1.0.0
+pyumldiagrams~=2.22
 PyGithub~=1.54.1
-wxPython==4.1.1
-xmlschema==1.4.1
+wxPython~=4.1.1
+xmlschema~=1.4.2
