<Enhancement>[DocStrings]: Update
integer parameter fixes; repr updates

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -48,8 +48,12 @@
             "level":     "WARNING",
             "propagate": "False"
         },
-        "org.pyut.miniogl.DiagramFrame": {
-            "level":     "WARNING",
+        "org.pyut.miniogl.Shape": {
+            "level":     "DEBUG",
+            "propagate": "False"
+        },
+        "org.pyut.miniogl.LineShape": {
+            "level":     "DEBUG",
             "propagate": "False"
         }
     }
