--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel~=0.36.2
-setuptools~=52.0.0
+setuptools~=54.1.1
 py2app~=0.23
 antlr4-python3-runtime~=4.8
 epr~=0.25
@@ -10,3 +10,5 @@ pyumldiagrams~=2.22
 PyGithub~=1.54.1
 wxPython~=4.1.1
 xmlschema~=1.4.2
+traviscli~=0.3.0
+pkgversions~=0.2.0
