<Bug>[Python Reverse Engineer]: <Account for read-only properties>
[There may be write only properties]

[https://github.com/hasii2011/PyUt/issues/292]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-wheel~=0.36.2
-setuptools~=54.1.1
-py2app~=0.23
-antlr4-python3-runtime~=4.8
+wheel~=0.37.1
+setuptools~=60.5.0
 epr~=0.25
 html-testRunner~=1.2.1
 orthogonal~=1.1.6
 pygmlparser~=1.0.0
-pyumldiagrams~=2.3.0
-PyGithub~=1.54.1
-wxPython~=4.1.1
-xmlschema~=1.4.2
-traviscli~=0.3.0
-pkgversions~=0.2.0
+pyumldiagrams~=2.30.0
+traviscli~=0.3.1
+pkgversions~=0.2.1
 watchpoints~=0.2.2
+py2app==0.26.1
+antlr4-python3-runtime==4.8
+PyGithub==1.54.1
+xmlschema==1.4.2
+wxPython==4.1.1
