--- a/src/.mypi.ini
+++ b/src/.mypi.ini
@@ -20,3 +20,6 @@ ignore_missing_imports = True
 
 [mypy-xmlschema.*]
 ignore_missing_imports = True
+
+[mypy-networkx.*]
+ignore_missing_imports = True
