<mypy>[Pyut]: <Continue to remove mypy warnings>
[Update version;  Update dependencies;  start deprecating get/set methods]

[https://github.com/hasii2011/PyUt/issues/293]

--- a/src/.mypi.ini
+++ b/src/.mypi.ini
@@ -23,3 +23,7 @@ ignore_missing_imports = True
 
 [mypy-networkx.*]
 ignore_missing_imports = True
+
+[mypy-Deprecated.*]
+ignore_missing_imports = True
+
