--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 wheel~=0.37.1
-setuptools~=60.5.0
+setuptools~=60.6.0
 epr~=0.25
 html-testRunner~=1.2.1
 orthogonal~=1.1.6
@@ -12,4 +12,10 @@ py2app==0.26.1
 antlr4-python3-runtime==4.8
 PyGithub==1.54.1
 xmlschema==1.4.2
+Deprecated==1.2.13
+mypy~=0.931
+mypy-extensions~= 0.4.3
+types-Deprecated~=1.2.5
+types-setuptools~=57.4.8
+typing_extensions~=4.0.1
 wxPython==4.1.1
