<Unit Test>[ReverseJava]: <Prep code to make unit testable>
[Move UI code out of OGL Class Generation;  Make plugin do layout in separate call ]

[https://github.com/hasii2011/PyUt/issues/309]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -55,6 +55,11 @@
         "org.pyut.miniogl.LineShape": {
             "level":     "DEBUG",
             "propagate": "False"
+        },
+        "org.pyut.plugins.io.javasupport.ReverseJava": {
+            "level":     "INFO",
+            "propagate": "False"
         }
+
     }
 }
