<mypy>[Pyut]: <Fix new warnings>
[]

[https://github.com/hasii2011/PyUt/issues/349]

--- a/src/.mypi.ini
+++ b/src/.mypi.ini
@@ -3,6 +3,8 @@
 python_version = 3.9
 pretty = True
 
+exclude = org/pyut/plugins/iopythonsupport/pyantlrparser/
+
 [mypy-wx.*]
 ignore_missing_imports = True
 
