<mypy>[unit tests]: <Big cleanup>
[Make unit tests pass mypy]

[https://github.com/hasii2011/PyUt/issues/350]

--- a/src/.mypi.ini
+++ b/src/.mypi.ini
@@ -29,3 +29,5 @@ ignore_missing_imports = True
 [mypy-Deprecated.*]
 ignore_missing_imports = True
 
+[mypy-HtmlTestRunner.*]
+ignore_missing_imports = True
