<Refactor>[Ogl]: <Remove mediator from OglObject>
[Use wx events to communicate with the mediator via the UmlDiagramsFrame]

[https://github.com/hasii2011/PyUt/issues/372]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -53,9 +53,22 @@
             "propagate": "False"
         },
         "org.pyut.ogl.OglObject": {
-            "level":     "WARNING",
+            "level":     "DEBUG",
+            "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.ui.UmlDiagramsFrame": {
+            "level":     "DEBUG",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+
+        "org.pyut.miniogl.DiagramFrame": {
+            "level":     "WARNING",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+
         "org.pyut.miniogl.Shape": {
             "level":     "DEBUG",
             "propagate": "False"
