--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_install:
 install:
   # pip install -r requirements.txt
   - python3 --version
-  - pip3 install antlr4-python3-runtime
+  - pip3 install antlr4-python3-runtime==4.9.3
   - pip3 install fpdf2
   - pip3 install PyGithub
   - pip3 install html-testRunner
