--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,9 @@ antlr4-python3-runtime==4.9.3
 PyGithub==1.54.1
 xmlschema==1.4.2
 Deprecated==1.2.13
-mypy~=0.942
+mypy==0.950
 mypy-extensions~= 0.4.3
-types-Deprecated~=1.2.5
-types-setuptools~=57.4.9
-typing_extensions~=4.1.1
+types-Deprecated==1.2.8
+types-setuptools==57.4.15
+typing_extensions==4.2.0
 wxPython==4.1.1
