<Infrastructure>[]: <Update dependencies ⬆️ >
[Updated all except as noted]

[https://github.com/hasii2011/PyUt/issues/394]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
 wheel~=0.37.1
-setuptools~=60.6.0
-epr~=0.25
-pyut2xml~=0.1.0
-epr2md~=0.1.0
-html-testRunner~=1.2.1
+setuptools~=62.3.2
+
 orthogonal~=1.1.6
-pygmlparser~=1.0.0
-pyumldiagrams~=2.30.5
-traviscli~=0.3.1
-pkgversions~=0.2.1
-watchpoints~=0.2.2
-py2app==0.28
+pyumldiagrams~=2.30.6
+pygmlparser==1.0.1
+
 antlr4-python3-runtime==4.9.3
-PyGithub==1.54.1
-xmlschema==1.4.2
+PyGithub==1.55
+xmlschema==1.11.1
 Deprecated==1.2.13
-mypy==0.950
-mypy-extensions~= 0.4.3
+
+pyut2xml~=0.1.0
+epr2md~=0.1.1
+traviscli==0.3.2
+pkgversions==0.2.2
+py2app~=0.28.2
+
+html-testRunner~=1.2.1
+mypy==0.960
+mypy-extensions~=0.4.3
 types-Deprecated==1.2.8
-types-setuptools==57.4.15
+types-setuptools==57.4.17
 typing_extensions==4.2.0
+
 wxPython==4.1.1
