--- a/.travis.yml
+++ b/.travis.yml
@@ -30,16 +30,14 @@ before_install:
 # command to install dependencies
 install:
   # pip install -r requirements.txt
-  - python3 --version
-  - pip3 install antlr4-python3-runtime==4.9.3
-  - pip3 install fpdf2
-  - pip3 install PyGithub
-  - pip3 install html-testRunner
-  - pip3 install networkx
-  - pip3 install orthogonal
-  - pip3 install pygmlparser
-  - pip3 install pyumldiagrams
-  - pip3 install xmlschema
+  - python --version
+  - pip install antlr4-python3-runtime==4.9.3
+  - pip install PyGithub==1.55
+  - pip install html-testRunner
+  - pip install orthogonal==1.1.6
+  - pip install pygmlparser==1.0.1
+  - pip install pyumldiagrams==2.30.6
+  - pip install xmlschema==1.4.2
   # - pip3 install wxPython
   - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
 
