<>[]: <I think I got it 🚧>
[Get rid of old syntax;  Fix bug in command]

[https://github.com/hasii2011/PyUt/issues/392]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -57,6 +57,11 @@
             "level":     "WARNING",
             "propagate": "False"
         },
+        "org.pyut.ui.UmlFrame": {
+            "level":     "DEBUG",
+            "propagate": "False",
+            "handlers":  ["consoleHandler"]
+        },
         "org.pyut.general.Mediator": {
             "level":     "WARNING",
             "propagate": "False"
