--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 wheel~=0.37.1
-setuptools~=62.3.2
+setuptools==62.3.3
 
 orthogonal~=1.1.6
 pyumldiagrams~=2.30.6
 pygmlparser==1.0.1
+pyutmodel~=1.0.3
 
 antlr4-python3-runtime==4.9.3
 PyGithub==1.55
@@ -17,7 +18,7 @@ pkgversions==0.2.2
 py2app~=0.28.2
 
 html-testRunner~=1.2.1
-mypy==0.960
+mypy==0.961
 mypy-extensions~=0.4.3
 types-Deprecated==1.2.8
 types-setuptools==57.4.17
