--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ install:
   - pip install pygmlparser==1.0.1
   - pip install pyumldiagrams==2.30.6
   - pip install xmlschema==1.4.2
+  - pip install pyutmodel==1.0.3
   # - pip3 install wxPython
   - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
 
