<Synchronize>[Ogl]: <Replace Ogl>
[]

[https://github.com/hasii2011/PyUt/issues/397)]

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ orthogonal~=1.1.6
 pyumldiagrams~=2.30.6
 pygmlparser==1.0.1
 pyutmodel~=1.0.3
+ogl~=0.53.1
 
 antlr4-python3-runtime==4.9.3
 PyGithub==1.55
