--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - pip install pyumldiagrams==2.30.6
   - pip install xmlschema==1.4.2
   - pip install pyutmodel==1.0.3
+  - pip install ogl==0.53.1
   # - pip3 install wxPython
   - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
 
