--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 wheel~=0.37.1
-setuptools==62.3.3
+setuptools==63.2.0
 
 orthogonal~=1.1.6
 pyumldiagrams~=2.30.6
 pygmlparser==1.0.1
-pyutmodel~=1.0.3
-ogl~=0.53.1
+pyutmodel==1.0.4
+ogl==0.53.2
 
 antlr4-python3-runtime==4.9.3
 PyGithub==1.55
@@ -19,10 +19,10 @@ pkgversions==0.2.2
 py2app~=0.28.2
 
 html-testRunner~=1.2.1
-mypy==0.961
+mypy==0.971
 mypy-extensions~=0.4.3
-types-Deprecated==1.2.8
-types-setuptools==57.4.17
-typing_extensions==4.2.0
+types-Deprecated==1.2.9
+types-setuptools==63.2.1
+typing_extensions==4.3.0
 
 wxPython==4.1.1
