--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ setuptools==63.2.0
 orthogonal~=1.1.6
 pyumldiagrams~=2.30.6
 pygmlparser==1.0.1
-pyutmodel==1.0.4
-ogl==0.53.5
+ogl~=0.54.9
+pyutmodel~=1.1.0
 
 antlr4-python3-runtime==4.9.3
 PyGithub==1.55
