--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist/
 Pyut.egg-info
 /venv-pyenv-3.9.1/
 /pyenv-3.9.9/
+/pyenv-3.10.0/
 /site/
 /docs/
 /pyut.log
@@ -19,3 +20,4 @@ junk*.*
 /.mypy_cache/
 /Pyut.app/
 .envrc
+.python-version
