--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 
-# os: osx
+os: osx
 
-# osx_image: xcode12u
+osx_image: xcode13.4
 
 notifications:
   email:
@@ -10,38 +10,18 @@ notifications:
     on_success: change # default: change
     on_failure: always # default: always
 
-dist: bionic
-
-language: python
-
 cache: pip
 
-services:
-  - xvfb
-
-python:
-  - "3.9.1"
 
 before_install:
-  - sudo apt install libgtk-3-dev
-  - sudo apt-get install python-wxgtk3.0
-  - sudo apt-get install -y  libsdl2-dev
+  - brew list
+  - brew upgrade python
+  - curl https://bootstrap.pypa.io/get-pip.py | python3
 
 # command to install dependencies
 install:
-  # pip install -r requirements.txt
-  # - pip3 install wxPython
-  - pip3 install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-18.04 wxPython
-  - python --version
-  - pip install antlr4-python3-runtime==4.9.3
-  - pip install PyGithub==1.55
-  - pip install html-testRunner
-  - pip install orthogonal==1.1.6
-  - pip install pygmlparser==1.0.1
-  - pip install pyumldiagrams==2.30.6
-  - pip install xmlschema==1.4.2
-  - pip install pyutmodel==1.0.3
-  - pip install ogl==0.53.1
+  - python3 --version
+  - pip install -r requirements.txt
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/scripts/runtests.sh
