<type>[PyutUIV2]: <Remove State Maintenance from UI>
[Application state should be in Project Manager, not the UI]

[https://github.com/hasii2011/PyUt/issues/416]

--- a/src/org/pyut/resources/loggingConfiguration.json
+++ b/src/org/pyut/resources/loggingConfiguration.json
@@ -52,6 +52,12 @@
         },
         "org.pyut.uiv2.PyutUIV2": {
             "level":     "WARNING",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "org.pyut.uiv2.ProjectTree": {
+            "level":     "WARNING",
+            "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
         "org.pyut.uiv2.PyutProjectV2": {
